k8s/deployment.yaml
---
# 1. Banco de Dados (PostgreSQL)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-db
  template:
    metadata:
      labels:
        app: app-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: app-db-svc
spec:
  selector:
    app: app-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# 2. Backend (Novo Django)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
      - name: backend
        image: loppzh/devops-backend:latest
        command: ["/bin/sh", "-c"]
        args: ["python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-backend-svc
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
# 3. Frontend (Novo)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
      - name: frontend
        image: loppzh/devops-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend-svc
spec:
  selector:
    app: app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# 4. Roteamento (Traefik) 
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: app-backend-svc
          port: 8000
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: app-frontend-svc
          port: 80
